--- a/src/template.html
+++ b/src/template.html
@@ -8,5 +8,16 @@
 	</head>
 	<body>
 		<div id="app">aa</div>
+		<script>
+		class Person{
+			constructor(){
+				//console.log(123321);
+			}
+			getName(){
+				console.log('name');
+			}
+		}
+		new Person();
+		</script>
 	</body>
 </html>
