--- a/src/template.html
+++ b/src/template.html
@@ -7,17 +7,7 @@
 		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 	</head>
 	<body>
+		<img src="img/haha.jpg" />
 		<div id="app">aa</div>
-		<script>
-		class Person{
-			constructor(){
-				//console.log(123321);
-			}
-			getName(){
-				console.log('name');
-			}
-		}
-		new Person();
-		</script>
 	</body>
 </html>
