webpack of dev & pro

--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
 		<script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
 	</head>
 	<body>
-		<img src="img/haha.jpg" />
+		<!--<img src="img/haha.jpg" />-->
 		<div id="app">aa</div>
 	</body>
 </html>
